--- a/cardgame/index.html
+++ b/cardgame/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Memory Game</title>
+  <title>Card Game</title>
   <link rel="stylesheet" href="style.css">
   </link>
   <script src="script.js" charset="utf-8"></script>
